--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       color: #ffffff;
     }
 
-    .btn-dark-honda {
+    .btn-dark-honda,
+    .navbar-sticky.navbar-stuck {
       background-color: #282828;
       color: #ffffff;
     }
@@ -80,7 +81,7 @@
   <body>
     <!-- Header -->
     <header
-      class="header navbar navbar-expand-lg navbar-light bg-light navbar-sticky"
+      class="header navbar navbar-expand-lg bg-dark-honda navbar-sticky"
       data-scroll-header=""
       data-fixed-element=""
     >
@@ -142,63 +143,9 @@
         </div>
       </div>
     </section>
-    <!-- <section class="bg-primary ps-lg-5 pb-4 mb-2 pt-5 py-md-5">
-      <div class="row">
-        <div class="col">
-          <div class="d-flex align-items-center">
-            <i class="bi bi-truck text-light" style="font-size: 2.125rem"></i>
-            <div class="ps-3">
-              <h6 class="fs-base text-light mb-1">Fast and free delivery</h6>
-              <p class="mb-0 fs-xs text-light opacity-50">
-                Free delivery for all orders over $200
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="d-flex align-items-center">
-            <i
-              class="bi bi-arrow-clockwise text-light"
-              style="font-size: 2.125rem"
-            ></i>
-            <div class="ps-3">
-              <h6 class="fs-base text-light mb-1">Money back guarantee</h6>
-              <p class="mb-0 fs-xs text-light opacity-50">
-                We return money within 30 days
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col justify-content-center">
-          <div class="d-flex align-items-center">
-            <i class="bi bi-clock text-light" style="font-size: 2.125rem"></i>
-            <div class="ps-3">
-              <h6 class="fs-base text-light mb-1">24/7 customer support</h6>
-              <p class="mb-0 fs-xs text-light opacity-50">
-                Friendly 24/7 customer support
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="d-flex align-items-center">
-            <i
-              class="bi bi-credit-card text-light"
-              style="font-size: 2.125rem"
-            ></i>
-            <div class="ps-3">
-              <h6 class="fs-base text-light mb-1">Secure online payment</h6>
-              <p class="mb-0 fs-xs text-light opacity-50">
-                We possess SSL / Secure сertificate
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
-    <section class="position-relative bg-honda pt-5 pt-lg-6 pb-7 mb-7">
-      <h1 class="text-center mb-5 text-light">Pilih Motor Favorit Anda</h1>
+    <section class="position-relative bg-honda pt-5 pt-lg-6">
+      <h2 class="text-center mb-5 text-light">Pilih Motor Favorit Anda</h2>
       <div class="shape shape-bottom shape-curve bg-body">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3000 185.4">
           <path
@@ -627,259 +574,167 @@
         </div>
       </div>
     </section>
+    <section class="container pt-5">
+      <div class="row align-items-center">
+        <div class="col-lg-4 col-md-5 text-center text-md-start mb-5 mb-md-0">
+          <h2 class="mb-3">
+            Mengapa Harus <br />
+            AHASS ?
+          </h2>
+        </div>
 
-    <!-- Galery Car -->
+        <div class="mx-auto" style="max-width: 610px">
+          <div class="row align-items-center">
+            <div class="col-sm-6">
+              <div
+                class="bg-honda shadow-lg rounded-3 p-4 mb-grid-gutter text-center text-sm-start"
+              >
+                <h3 class="h5 mb-2 text-light">Berkualitas dan Bergaransi</h3>
+                <p class="fs-sm">
+                  Parts Asli & Lengkap Kepastian Pekerjaan Kepastian Biaya
+                  Tenaga Kerja Professional
+                </p>
+              </div>
+              <div
+                class="bg-honda shadow-lg rounded-3 p-4 mb-grid-gutter text-center text-sm-start"
+              >
+                <h3 class="h5 mb-2 text-light">Responsif</h3>
+                <p class="fs-sm">
+                  Pelayanan responsif Pekerjaan cepat & terukur Kepastian waktu
+                </p>
+              </div>
+              <div
+                class="bg-honda shadow-lg rounded-3 p-4 mb-grid-gutter text-center text-sm-start"
+              >
+                <h3 class="h5 mb-2 text-light">Nyaman</h3>
+                <p class="fs-sm">Fasilitas nyaman Petugas yang ramah</p>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div
+                class="bg-honda shadow-lg rounded-3 p-4 mb-grid-gutter text-center text-sm-start"
+              >
+                <h3 class="h5 mb-2 text-light">Jaringan Luas</h3>
+                <p class="fs-sm">Jaringan luas dan mudah ditemui</p>
+              </div>
+              <div
+                class="bg-honda shadow-lg rounded-3 p-4 mb-grid-gutter text-center text-sm-start"
+              >
+                <h3 class="h5 mb-2 text-light">Modern & Lengkap</h3>
+                <p class="fs-sm">Peralatan yang digunakan modern dan lengkap</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <section class="bg-secondary py-5 py-md-6 mt-n4">
-      <div class="container py-2">
-        <div class="row justify-content-center">
-          <div class="col-lg-6 col-md-8 col-sm-10 text-center">
-            <h2>Vehicles</h2>
-            <p class="text-muted mb-5 pb-2">
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-              accusantium doloremque laudantium, totam rem aperiam eaque ipsa
-              quae
+    <section class="container pt-5 pb-4 mt-3 mt-md-0 mb-md-3 pb-md-5 pt-md-7">
+      <h2 class="text-center">Service</h2>
+      <p class="text-center">Hanya tersedia di Honda Wing</p>
+      <div class="row pt-3 row-cols-4">
+        <!-- Image on top -->
+        <div class="col">
+          <img
+            src="images/Wing Corner.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Wing Corner</h5>
+            <p class="card-text fs-sm">
+              Pelanggan bisa melihat semua line up motor premium Honda serta
+              aksesorisnya dengan pelayanan terbaik seperti makanan, minuman,
+              dan lain lain.
             </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-            <a
-              class="card card-hover border-0 shadow mx-auto"
-              href="#"
-              style="max-width: 400px"
-              ><img
-                class="card-img-top"
-                src="https://hyundaimobil.co.id//storage/vehicles/August2023/CZsZxI6o6lCdN6b8wwNG.png"
-                alt="Life Science"
-              />
-              <div class="card-body">
-                <h3 class="h5 mb-0">Life Science</h3>
-              </div></a
-            >
-          </div>
-          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-            <a
-              class="card card-hover border-0 shadow mx-auto"
-              href="#"
-              style="max-width: 400px"
-              ><img
-                class="card-img-top"
-                src="https://hyundaimobil.co.id//storage/vehicles/August2023/eRjY0sxfFZuEy7Pm6adT.png"
-                alt="Technology"
-              />
-              <div class="card-body">
-                <h3 class="h5 mb-0">Technology</h3>
-              </div></a
-            >
-          </div>
-          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-            <a
-              class="card card-hover border-0 shadow mx-auto"
-              href="#"
-              style="max-width: 400px"
-              ><img
-                class="card-img-top"
-                src="https://hyundaimobil.co.id//storage/vehicles/August2023/CZsZxI6o6lCdN6b8wwNG.png"
-                alt="Healthcare"
-              />
-              <div class="card-body">
-                <h3 class="h5 mb-0">Healthcare</h3>
-              </div></a
-            >
-          </div>
-          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-            <a
-              class="card card-hover border-0 shadow mx-auto"
-              href="#"
-              style="max-width: 400px"
-              ><img
-                class="card-img-top"
-                src="https://hyundaimobil.co.id//storage/vehicles/August2023/pq3ONkc8LvUI4MknU5Oa.png"
-                alt="Natural Resources"
-              />
-              <div class="card-body">
-                <h3 class="h5 mb-0">Natural Resources</h3>
-              </div></a
-            >
-          </div>
-          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-            <a
-              class="card card-hover border-0 shadow mx-auto"
-              href="#"
-              style="max-width: 400px"
-              ><img
-                class="card-img-top"
-                src="https://hyundaimobil.co.id//storage/vehicles/August2023/tsmRQupSzNFp7zHrleQV.png"
-                alt="Freight &amp; Logistics"
-              />
-              <div class="card-body">
-                <h3 class="h5 mb-0">Freight &amp; Logistics</h3>
-              </div></a
-            >
-          </div>
-          <div class="col-lg-4 col-sm-6 mb-grid-gutter">
-            <a
-              class="card card-hover border-0 shadow mx-auto"
-              href="#"
-              style="max-width: 400px"
-              ><img
-                class="card-img-top"
-                src="https://hyundaimobil.co.id//storage/vehicles/August2023/hFgnofTxxSJGzAc5Go2O.png"
-                alt="Retail"
-              />
-              <div class="card-body">
-                <h3 class="h5 mb-0">Retail</h3>
-              </div></a
-            >
-          </div>
-        </div>
-        <div class="pt-3 text-center">
-          <a class="btn btn-primary" href="#">See all Cars</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="container pt-5 pb-4 py-md-6 pt-lg-7">
-      <h2 class="text-center pt-3">Services</h2>
-      <p
-        class="d-block fs-sm text-muted text-center mx-auto pb-4 mb-5"
-        style="max-width: 400px"
-      >
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis eum
-        modi, adipisci facilis.
-      </p>
-      <div class="row row-cols-1 row-cols-lg-2">
-        <div class="col">
+        <div class="col-3">
           <img
-            class="d-inline-block mb-3"
-            src="https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/essential/customer-protection-program.png"
-            alt="Strategy"
+            src="images/Wing Sales Person.webp"
+            class="card-img-top rounded"
+            alt="Card image"
           />
-        </div>
-        <div class="col">
-          <img
-            class="d-inline-block mb-3"
-            src="https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/essential/payment-protection-program.png"
-            alt="Digital"
-          />
-        </div>
-        <div class="col">
-          <img
-            class="d-inline-block mb-3"
-            src="https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/essential/new-stargazer-replacement-guarantee.png"
-            alt="Visual Identity"
-          />
-        </div>
-        <div class="col">
-          <img
-            class="d-inline-block mb-3"
-            src="https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/essential/new-stargazer-replacement-guarantee.png"
-            alt="Motion"
-          />
-        </div>
-        <div class="col">
-          <img
-            class="d-inline-block mb-3"
-            src="https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/essential/tire-protection-program.png"
-            alt="Motion"
-          />
-        </div>
-      </div>
-    </section>
-
-    <!-- Benefit -->
-    <section class="row g-0 mt-3">
-      <div
-        class="col-md-6 bg-size-cover py-7"
-        style="
-          background-image: url(https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/bintang-baru-keluarga.jpg);
-          background-position: center;
-        "
-      >
-        <div class="py-6"></div>
-      </div>
-      <div
-        class="col-md-6 border-top border-bottom px-3 pe-xl-0 ps-lg-5 ps-xl-7"
-      >
-        <div
-          class="ms-sm-4 my-2 py-5 my-sm-0 py-sm-6 py-md-7"
-          style="max-width: 495px"
-        >
-          <h2 class="mb-4">Tampil memukau bagai bintang.</h2>
-          <p class="mb-5">
-            Desain futuristik dan dinamis akan langsung terlihat melalui one
-            curve design yang diciptakan untuk memalingkan setiap pandangan.
-            Dilengkapi dengan Horizon type DRL (Daytime Running Lights) dan
-            H-shape LED Rear Combination Lamp, Hyundai STARGAZER semakin menawan
-            dengan eksterior yang membuat Anda dan keluarga tampil memukau bagai
-            bintang
-          </p>
-
-          <div class="ps-5 mt-n1">
-            <a class="fancy-link ms-4" href="#">Read more</a>
+          <div class="card-body">
+            <h5 class="card-title">Wing Sales Person</h5>
+            <p class="card-text fs-sm">
+              Pelanggan akan dilayani dengan baik oleh seorang Wing Sales Person
+              untuk melakukan pembelian motor premium Honda dan juga bertanya
+              detail tentang produk. PEMBAYARAN
+            </p>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="row g-0 mt-3">
-      <div
-        class="col-md-6 border-top border-bottom px-3 pe-xl-0 ps-lg-5 ps-xl-7"
-      >
-        <div
-          class="ms-sm-4 my-2 py-5 my-sm-0 py-sm-6 py-md-7"
-          style="max-width: 495px"
-        >
-          <h2 class="mb-4">Captain Seat.</h2>
-          <p class="mb-5">
-            Perjalanan bersama keluarga semakin menyenangkan. STARGAZER
-            Essential hadir dengan pilihan Captain Seat dan ruang kabin yang
-            luas. Memberikan kenyamanan ekstra untuk beraktivitas saat berada di
-            dalam mobil.
-          </p>
-
-          <div class="ps-5 mt-n1">
-            <a class="fancy-link ms-4" href="#">Read more</a>
+        <div class="col-3">
+          <img
+            src="images/Pembayaran.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Pembayaran</h5>
+            <p class="card-text fs-sm">Pembayaran Non tunai dengan mesin EDC</p>
           </div>
         </div>
-      </div>
-      <div
-        class="col-md-6 bg-size-cover py-7"
-        style="
-          background-image: url(https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/essential/captain-seat.jpg);
-          background-position: center;
-        "
-      >
-        <div class="py-6"></div>
-      </div>
-    </section>
-    <section class="row g-0 mt-3">
-      <div
-        class="col-md-6 bg-size-cover py-7"
-        style="
-          background-image: url(https://hyundaimobil.co.id/vehicle/assets/images/stargazer-2023/bintangnya-performa-maksimal.jpg);
-          background-position: center;
-        "
-      >
-        <div class="py-6"></div>
-      </div>
-      <div
-        class="col-md-6 border-top border-bottom px-3 pe-xl-0 ps-lg-5 ps-xl-7"
-      >
-        <div
-          class="ms-sm-4 my-2 py-5 my-sm-0 py-sm-6 py-md-7"
-          style="max-width: 495px"
-        >
-          <h2 class="mb-4">Bintangnya performa maksimal.</h2>
-          <p class="mb-5">
-            Hyundai STARGAZER dilengkapi mesin Smartstream 1.5L dengan sistem
-            Intelligent Variable Transmission (IVT) hasilkan performa tangguh,
-            responsif, serta efisien. Fitur Drive Mode juga tersedia untuk
-            pilihan gaya berkendara yang paling sesuai untuk Anda.
-          </p>
-
-          <div class="ps-5 mt-n1">
-            <a class="fancy-link ms-4" href="#">Read more</a>
+        <div class="col-3">
+          <img
+            src="images/Free Coffee.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Free Coffee and Tea</h5>
+            <p class="card-text fs-sm">FREE COFFEE AND TEA</p>
+          </div>
+        </div>
+        <div class="col-3">
+          <img
+            src="images/Free Nitrogen.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Free Nitrogen</h5>
+            <p class="card-text fs-sm">
+              Pelanggan dapat mengisi tekanan ban dengan gas nitrogen secara
+              gratis setelah melakukan servis motor premium Honda. (Lifetime
+              Free Nitrogen)
+            </p>
+          </div>
+        </div>
+        <div class="col-3">
+          <img
+            src="images/Free Helmet Deodorizer.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Free Helmet Deodorizer</h5>
+            <p class="card-text fs-sm">
+              Pelanggan mendapatkan layanan pengharum helm secara cuma-cuma
+              setelah melakukan servis motor premium Honda.
+            </p>
+          </div>
+        </div>
+        <div class="col-3">
+          <img
+            src="images/Ahass Booking.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Ahass Booking</h5>
+            <p class="card-text fs-sm">Layanan pemesanan</p>
+          </div>
+        </div>
+        <div class="col-3">
+          <img
+            src="images/Ahass Booking.webp"
+            class="card-img-top rounded"
+            alt="Card image"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Pit Express</h5>
+            <p class="card-text fs-sm">Pit Express</p>
           </div>
         </div>
       </div>
