--- a/index.html
+++ b/index.html
@@ -741,90 +741,8 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer bg-dark-honda pt-5 pt-md-6 pt-lg-7">
-      <div class="container py-3 pt-md-0">
-        <div class="row pb-2 pb-md-5">
-          <form
-            class="col-xl-6 col-lg-7 col-md-7 needs-validation mb-5"
-            novalidate=""
-          >
-            <h2 class="pb-4 text-light">What car are you looking for?</h2>
-
-            <div class="input-group mb-3">
-              <i
-                class="bi bi-person text-primary position-absolute top-50 start-0 translate-middle-y ms-3"
-              ></i>
-              <input
-                class="form-control rounded"
-                type="text"
-                placeholder="Name"
-                required=""
-              />
-            </div>
-            <div class="input-group mb-3">
-              <i
-                class="bi bi-envelope position-absolute top-50 start-0 translate-middle-y ms-3"
-              ></i>
-              <input
-                class="form-control rounded"
-                type="email"
-                placeholder="Email"
-                required=""
-              />
-            </div>
-            <div class="mb-3 pb-1">
-              <textarea
-                class="form-control"
-                rows="4"
-                placeholder="Project description"
-                required=""
-              ></textarea>
-            </div>
-            <div class="row pt-2">
-              <div class="col-lg-6 col-md-8">
-                <button
-                  class="btn btn-primary bg-honda btn-block"
-                  type="submit"
-                >
-                  Send Request
-                </button>
-              </div>
-            </div>
-          </form>
-          <div class="col-xl-3 col-lg-4 offset-xl-3 offset-lg-1 col-md-5 mb-5">
-            <h2 class="pb-2 text-light">Contacts</h2>
-            <ul class="list-unstyled fs-sm mb-4 pb-2">
-              <li>
-                <a
-                  class="nav-link-style text-light"
-                  href="mailto:contact@example.com"
-                  >contact@example.com</a
-                >
-              </li>
-              <li>
-                <a class="nav-link-style text-light" href="tel:+15262200459"
-                  >+ 1 526 220 0459</a
-                >
-              </li>
-            </ul>
-            <h3 class="h6 pb-2 text-light">Or connect with us on:</h3>
-            <a
-              class="btn-social bs-outline text-light bs-facebook bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-facebook"></i></a
-            ><a
-              class="btn-social bs-outline text-light bs-twitter bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-twitter"></i></a
-            ><a
-              class="btn-social bs-outline text-light bs-instagram bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-instagram text-light"></i
-            ></a>
-          </div>
-        </div>
-      </div>
-      <div class="bg-dark pt-5 pb-4">
+    <footer class="footer bg-dark-honda">
+      <div class="bg-dark-honda py-4">
         <div
           class="container d-md-flex justify-content-between align-items-center text-center"
         >
