--- a/index.html
+++ b/index.html
@@ -740,36 +740,79 @@
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer bg-dark-honda">
-      <div class="bg-dark-honda py-4">
-        <div
-          class="container d-md-flex justify-content-between align-items-center text-center"
-        >
-          <ul class="list-inline fs-sm mb-3 order-md-2">
-            <li class="list-inline-item my-1">
-              <a class="nav-link-style nav-link-light" href="#">Support</a>
-            </li>
-            <li class="list-inline-item my-1">
-              <a class="nav-link-style nav-link-light" href="#">Contacts</a>
-            </li>
-            <li class="list-inline-item my-1">
-              <a class="nav-link-style nav-link-light" href="#"
-                >Terms &amp; Conditions</a
+    <footer class="footer bg-dark pt-5 pt-md-6">
+      <div class="container pt-3 pt-md-0">
+        <div class="row pb-3">
+          <div class="col-md-4 mt-n2 pb-3 pb-md-0 mb-4">
+            <img
+              src="https://netfin.id/site-assets/netfin/logo.svg"
+              width="54"
+              class="pb-2"
+              alt=""
+            />
+            <h3 class="fs-5 text-light">
+              Shandy Konsultan Mobil Baru Terpercaya
+            </h3>
+            <p class="">
+              <span class="text-light me-1"
+                >© All rights reserved. Made by</span
+              ><a
+                class="nav-link-style nav-link-light"
+                href="https://netfin.id/"
+                target="_blank"
+                rel="noopener"
+                >Netfin.id</a
               >
-            </li>
-          </ul>
-          <p class="fs-sm mb-3 order-md-1">
-            <span class="text-light opacity-50 me-1"
-              >© All rights reserved. Made by</span
-            ><a
-              class="nav-link-style nav-link-light"
+            </p>
+            <a
+              class="btn-social bs-outline bs-facebook bs-light bs-lg me-2 mb-2"
               href="#"
-              target="_blank"
-              rel="noopener"
-              >Netfin</a
-            >
-          </p>
+              ><i class="bi bi-facebook"></i></a
+            ><a
+              class="btn-social bs-outline bs-twitter bs-light bs-lg me-2 mb-2"
+              href="#"
+              ><i class="bi bi-twitter"></i></a
+            ><a
+              class="btn-social bs-outline bs-instagram bs-light bs-lg me-2 mb-2"
+              href="#"
+              ><i class="bi bi-instagram"></i></a
+            ><a
+              class="btn-social bs-outline bs-google bs-light bs-lg me-2 mb-2"
+              href="#"
+              ><i class="bi bi-google"></i
+            ></a>
+          </div>
+        </div>
+        <hr class="my-0 border-light" />
+        <div class="row align-items-center mt-3 py-4">
+          <div class="col-md-6 order-md-2 text-md-end mb-3">
+            <ul class="list-inline fs-sm mb-0">
+              <li class="list-inline-item">
+                <a class="nav-link-style nav-link-light" href="#">Support</a>
+              </li>
+              <li class="list-inline-item">
+                <a class="nav-link-style nav-link-light" href="#">Contacts</a>
+              </li>
+              <li class="list-inline-item">
+                <a class="nav-link-style nav-link-light" href="#"
+                  >Terms &amp; Conditions</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 order-md-1 mb-3">
+            <p class="fs-sm mb-0">
+              <span class="text-light opacity-50 me-1"
+                >© All rights reserved. Made by</span
+              ><a
+                class="nav-link-style nav-link-light"
+                href="https://netfin.id/"
+                target="_blank"
+                rel="noopener"
+                >Netfin.id</a
+              >
+            </p>
+          </div>
         </div>
       </div>
     </footer>
