--- a/index.html
+++ b/index.html
@@ -77,17 +77,52 @@
       background-color: #e61b33;
       color: #ffffff;
     }
+
+    img {
+      max-width: 100%;
+    }
+    .gallery {
+      background-color: #dbddf1;
+      padding: 80px 0;
+    }
+    .gallery img {
+      background-color: #ffffff;
+      padding: 15px;
+      width: 100%;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+    }
+    #gallery-modal .modal-img {
+      width: 100%;
+    }
   </style>
   <body>
     <!-- Header -->
     <header
-      class="header navbar navbar-expand-lg bg-dark-honda navbar-sticky"
+      class="header navbar navbar-expand-lg navbar-light bg-dark-honda navbar-shadow navbar-sticky navbar-stuck"
       data-scroll-header=""
-      data-fixed-element=""
     >
-      <div class="container px-0 py-3 px-xl-3">
+      <div class="navbar-search bg-light">
+        <div class="container d-flex flex-nowrap align-items-center">
+          <i class="ai-search fs-xl"></i>
+          <input
+            class="form-control form-control-xl navbar-search-field"
+            type="text"
+            placeholder="Search site"
+          />
+          <div class="d-flex align-items-center">
+            <span class="text-muted fs-xs d-none d-sm-inline">Close</span>
+            <button
+              class="btn-close p-2"
+              type="button"
+              data-bs-toggle="search"
+            ></button>
+          </div>
+        </div>
+      </div>
+      <div class="container px-0 px-xl-3">
         <button
-          class="navbar-toggler ms-n2 me-2"
+          class="navbar-toggler ms-n2 me-4"
           type="button"
           data-bs-toggle="offcanvas"
           data-bs-target="#primaryMenu"
@@ -99,13 +134,54 @@
           ><img
             class="d-none d-lg-block"
             src="images/honda.svg"
-            alt="Logo Hyundai"
+            alt="Around"
             width="153" /><img
             class="d-lg-none"
             src="images/honda.svg"
-            alt="Honda Hyundai"
+            alt="Around"
             width="58"
         /></a>
+
+        <div class="offcanvas offcanvas-collapse order-lg-2" id="primaryMenu">
+          <div class="offcanvas-header navbar-shadow">
+            <h5 class="mt-1 mb-0">Menu</h5>
+            <button
+              class="btn-close lead"
+              type="button"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <!-- Menu-->
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a
+                  class="nav-link text-light"
+                  href="#"
+                  data-bs-toggle="dropdown"
+                  >Hubungi Sales</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-light"
+                  href="#"
+                  data-bs-toggle="dropdown"
+                  >Mediator</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-light"
+                  href="#"
+                  data-bs-toggle="dropdown"
+                  >Cek PO</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <!-- Hero slider -->
@@ -574,6 +650,7 @@
         </div>
       </div>
     </section>
+
     <section class="container pt-5">
       <div class="row align-items-center">
         <div class="col-lg-4 col-md-5 text-center text-md-start mb-5 mb-md-0">
@@ -631,7 +708,7 @@
 
     <section class="container pt-5 pb-4 mt-3 mt-md-0 mb-md-3 pb-md-5 pt-md-7">
       <h2 class="text-center">Service</h2>
-      <p class="text-center">Hanya tersedia di Honda Wing</p>
+      <p class="text-center">Kelebihan Service di AHASS</p>
       <div class="row pt-3 row-cols-4">
         <!-- Image on top -->
         <div class="col">
@@ -740,6 +817,167 @@
       </div>
     </section>
 
+    <section>
+      <section class="gallery min-vh-100">
+        <div class="container-lg">
+          <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-4">
+            <div class="col">
+              <img
+                src="images/materi1.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi2.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi3.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi4.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi5.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi6.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi7.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi8.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi9.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi10.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi11.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi12.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi13.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi14.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi15.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images/materi16.webp"
+                class="gallery-item rounded-2"
+                alt="gallery"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="gallery-modal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <img
+                src="images/materi1.webp"
+                class="modal-img"
+                alt="modal img"
+              />
+              <img
+                src="images/materi2.webp"
+                class="modal-img"
+                alt="modal img"
+              />
+              <img
+                src="images/materi3.webp"
+                class="modal-img"
+                alt="modal img"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer bg-dark pt-5 pt-md-6">
       <div class="container pt-3 pt-md-0">
         <div class="row pb-3">
@@ -750,7 +988,7 @@
               class="pb-2"
               alt=""
             />
-            <h3 class="fs-5 text-light">Honda Jawa Barat</h3>
+            <h3 class="fs-5 text-light">Honda Jabar Solusi Motor Baru</h3>
             <p class="">
               <span class="text-light me-1"
                 >© All rights reserved. Made by</span
@@ -830,5 +1068,17 @@
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
     <!-- Main theme script-->
     <script src="js/theme.min.js"></script>
+    <script>
+      document.addEventListener("click", function (e) {
+        if (e.target.classList.contains("gallery-item rounded-2")) {
+          const src = e.target.getAttribute("src");
+          document.querySelector(".modal-img").src = src;
+          const myModal = new bootstrap.Modal(
+            document.getElementById("gallery-modal")
+          );
+          myModal.show();
+        }
+      });
+    </script>
   </body>
 </html>
