--- a/index.html
+++ b/index.html
@@ -706,6 +706,153 @@
       </div>
     </section>
 
+    <section class="gallery min-vh-100">
+      <div class="container-lg">
+        <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-4">
+          <div class="col">
+            <img
+              src="images/materi1.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi2.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi3.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi4.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi5.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi6.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi7.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi8.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi9.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi10.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi11.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi12.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi13.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi14.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi15.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+          <div class="col">
+            <img
+              src="images/materi16.webp"
+              class="gallery-item rounded-2"
+              alt="gallery"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="gallery-modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <img src="images/materi1.webp" class="modal-img" alt="modal img" />
+            <img src="images/materi2.webp" class="modal-img" alt="modal img" />
+            <img src="images/materi3.webp" class="modal-img" alt="modal img" />
+          </div>
+        </div>
+      </div>
+    </div>
+
     <section class="container pt-5 pb-4 mt-3 mt-md-0 mb-md-3 pb-md-5 pt-md-7">
       <h2 class="text-center">Service</h2>
       <p class="text-center">Kelebihan Service di AHASS</p>
@@ -812,167 +959,6 @@
           <div class="card-body">
             <h5 class="card-title">Pit Express</h5>
             <p class="card-text fs-sm">Pit Express</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <section class="gallery min-vh-100">
-        <div class="container-lg">
-          <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-4">
-            <div class="col">
-              <img
-                src="images/materi1.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi2.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi3.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi4.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi5.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi6.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi7.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi8.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi9.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi10.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi11.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi12.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi13.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi14.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi15.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images/materi16.webp"
-                class="gallery-item rounded-2"
-                alt="gallery"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="gallery-modal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <!-- <h5 class="modal-title" id="exampleModalLabel">Modal title</h5> -->
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <img
-                src="images/materi1.webp"
-                class="modal-img"
-                alt="modal img"
-              />
-              <img
-                src="images/materi2.webp"
-                class="modal-img"
-                alt="modal img"
-              />
-              <img
-                src="images/materi3.webp"
-                class="modal-img"
-                alt="modal img"
-              />
-            </div>
           </div>
         </div>
       </div>
