--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
       </div>
     </section>
 
-    <section class="gallery min-vh-100">
+    <section class="gallery">
       <div class="container-lg">
         <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-4">
           <div class="col">
