--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
     <section class="gallery">
       <div class="container-lg">
-        <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-4">
+        <div class="row gy-4 row-cols-2 row-cols-md-4">
           <div class="col">
             <img
               src="images/materi1.webp"
@@ -856,7 +856,7 @@
     <section class="container pt-5 pb-4 mt-3 mt-md-0 mb-md-3 pb-md-5 pt-md-7">
       <h2 class="text-center">Service</h2>
       <p class="text-center">Kelebihan Service di AHASS</p>
-      <div class="row pt-3 row-cols-4">
+      <div class="row pt-3 row-cols-1 row-cols-lg-4">
         <!-- Image on top -->
         <div class="col">
           <img
@@ -873,7 +873,7 @@
             </p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Wing Sales Person.webp"
             class="card-img-top rounded"
@@ -888,7 +888,7 @@
             </p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Pembayaran.webp"
             class="card-img-top rounded"
@@ -899,7 +899,7 @@
             <p class="card-text fs-sm">Pembayaran Non tunai dengan mesin EDC</p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Free Coffee.webp"
             class="card-img-top rounded"
@@ -910,7 +910,7 @@
             <p class="card-text fs-sm">FREE COFFEE AND TEA</p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Free Nitrogen.webp"
             class="card-img-top rounded"
@@ -925,7 +925,7 @@
             </p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Free Helmet Deodorizer.webp"
             class="card-img-top rounded"
@@ -939,7 +939,7 @@
             </p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Ahass Booking.webp"
             class="card-img-top rounded"
@@ -950,7 +950,7 @@
             <p class="card-text fs-sm">Layanan pemesanan</p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col">
           <img
             src="images/Ahass Booking.webp"
             class="card-img-top rounded"
