--- a/index.html
+++ b/index.html
@@ -157,24 +157,24 @@
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a
-                  class="nav-link text-light"
-                  href="#"
+                  class="nav-link"
+                  href="https://wa.me/6281558444484?text=Saya%20mau%20pengajuan%20ke%20BFI%20Agency"
                   data-bs-toggle="dropdown"
                   >Hubungi Sales</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link text-light"
-                  href="#"
+                  class="nav-link"
+                  href="https://wa.me/6281558444484?text=Saya%20mau%20pengajuan%20ke%20BFI%20Agency"
                   data-bs-toggle="dropdown"
                   >Mediator</a
                 >
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link text-light"
-                  href="#"
+                  class="nav-link"
+                  href="https://wa.me/6281558444484?text=Saya%20mau%20pengajuan%20ke%20BFI%20Agency"
                   data-bs-toggle="dropdown"
                   >Cek PO</a
                 >
@@ -706,7 +706,7 @@
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery text-center">
       <div class="container-lg">
         <div class="row gy-4 row-cols-2 row-cols-md-4">
           <div class="col">
@@ -821,6 +821,20 @@
               alt="gallery"
             />
           </div>
+        </div>
+        <div class="mt-4">
+          <a
+            class="mt-4"
+            target="_blank"
+            href="https://wa.me/6281558444484?text=Saya%20mau%20pengajuan%20ke%20BFI%20Agency"
+          >
+            <img
+              src="https://netfin.id/site-assets/netfin/button-wa.png"
+              class="rounded"
+              alt="adira finance whatsapp"
+              style="width: 300px"
+            />
+          </a>
         </div>
       </div>
     </section>
