--- a/index.html
+++ b/index.html
@@ -652,7 +652,179 @@
     </section>
 
     <section class="container pt-5">
-      <div class="row align-items-center">
+      <!-- Related posts carousel -->
+      <div class="tns-carousel-wrapper">
+        <div
+          class="tns-carousel-inner"
+          data-carousel-options='{"items": 2, "controls": false, "autoHeight": true, "responsive": {"0":{"items":1, "gutter": 16},"576":{"items":2, "gutter": 16},"900":{"items":3, "gutter": 16}, "1100":{"items":3, "gutter": 23}}}'
+        >
+          <!-- Article-->
+          <div class="pb-2">
+            <article class="card card-hover mx-1">
+              <a class="card-img-top" href="#">
+                <img src="images/Wing Corner.webp" alt="Post thumbnail" />
+              </a>
+              <div class="card-body">
+                <a class="meta-link fs-sm mb-2" href="#">Technology</a>
+                <h2 class="h5 nav-heading mb-4">
+                  <a href="#">How technology affect our decisions</a>
+                </h2>
+                <a
+                  class="d-flex meta-link fs-sm align-items-center pt-3"
+                  href="#"
+                >
+                  <img
+                    class="rounded-circle"
+                    width="36"
+                    src="images/avatar.jpg"
+                    alt="Jessica Miller"
+                  />
+                  <div class="ps-2 ms-1 mt-n1">
+                    by<span class="fw-semibold ms-1">Jessica Miller</span>
+                  </div>
+                </a>
+                <div class="mt-3 text-end text-nowrap">
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-message-square me-1"></i>
+                    &nbsp;3
+                  </a>
+                  <span class="meta-divider"></span>
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-calendar me-1 mt-n1"></i>
+                    &nbsp;Feb 4
+                  </a>
+                </div>
+              </div>
+            </article>
+          </div>
+
+          <!-- Article-->
+          <div class="pb-2">
+            <article class="card card-hover mx-1">
+              <a class="card-img-top" href="#">
+                <img src="images/Wing Corner.webp" alt="Post thumbnail" />
+              </a>
+              <div class="card-body">
+                <a class="meta-link fs-sm mb-2" href="#">Business</a>
+                <h2 class="h5 nav-heading mb-4">
+                  <a href="#">Open space - new trend in office design</a>
+                </h2>
+                <a
+                  class="d-flex meta-link fs-sm align-items-center pt-3"
+                  href="#"
+                >
+                  <img
+                    class="rounded-circle"
+                    width="36"
+                    src="images/avatar.jpg"
+                    alt="Daniel Adams"
+                  />
+                  <div class="ps-2 ms-1 mt-n1">
+                    by
+                    <span class="fw-semibold ms-1">Daniel Adams</span>
+                  </div>
+                </a>
+                <div class="mt-3 text-end text-nowrap">
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-message-square me-1"></i>
+                    &nbsp;12
+                  </a>
+                  <span class="meta-divider"></span>
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-calendar me-1 mt-n1"></i>
+                    &nbsp;Jan 10
+                  </a>
+                </div>
+              </div>
+            </article>
+          </div>
+
+          <!-- Article-->
+          <div class="pb-2">
+            <article class="card card-hover mx-1">
+              <a class="card-img-top" href="#">
+                <img src="images/Wing Corner.webp" alt="Post thumbnail" />
+              </a>
+              <div class="card-body">
+                <a class="meta-link fs-sm mb-2" href="#">Business</a>
+                <h2 class="h5 nav-heading mb-4">
+                  <a href="#">Business offices of Fortune 500 companies</a>
+                </h2>
+                <a
+                  class="d-flex meta-link fs-sm align-items-center pt-3"
+                  href="#"
+                >
+                  <img
+                    class="rounded-circle"
+                    width="36"
+                    src="images/avatar.jpg"
+                    alt="Barbara Palson"
+                  />
+                  <div class="ps-2 ms-1 mt-n1">
+                    by
+                    <span class="fw-semibold ms-1">Barbara Palson</span>
+                  </div>
+                </a>
+                <div class="mt-3 text-end text-nowrap">
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-message-square me-1"></i>
+                    &nbsp;5
+                  </a>
+                  <span class="meta-divider"></span>
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-calendar me-1 mt-n1"></i>
+                    &nbsp;Nov 20
+                  </a>
+                </div>
+              </div>
+            </article>
+          </div>
+
+          <!-- Article-->
+          <div class="pb-2">
+            <article class="card card-hover mx-1">
+              <a class="card-img-top" href="#">
+                <img src="images/Wing Corner.webp" alt="Post thumbnail" />
+              </a>
+              <div class="card-body">
+                <a class="meta-link fs-sm mb-2" href="#">Technology</a>
+                <h2 class="h5 nav-heading mb-4">
+                  <a href="#"
+                    >Payments made easy. How new Tech will affect E-Commerce?</a
+                  >
+                </h2>
+                <a
+                  class="d-flex meta-link fs-sm align-items-center pt-3"
+                  href="#"
+                >
+                  <img
+                    class="rounded-circle"
+                    width="36"
+                    src="images/avatar.jpg"
+                    alt="Charlie Welch"
+                  />
+                  <div class="ps-2 ms-1 mt-n1">
+                    by
+                    <span class="fw-semibold ms-1">Charlie Welch</span>
+                  </div>
+                </a>
+                <div class="mt-3 text-end text-nowrap">
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-message-square me-1"></i>
+                    &nbsp;17
+                  </a>
+                  <span class="meta-divider"></span>
+                  <a class="meta-link fs-xs" href="#">
+                    <i class="ai-calendar me-1 mt-n1"></i>
+                    &nbsp;Nov 08
+                  </a>
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="row align-items-center">
         <div class="col-lg-4 col-md-5 text-center text-md-start mb-5 mb-md-0">
           <h2 class="mb-3">
             Mengapa Harus <br />
@@ -703,7 +875,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <section class="gallery text-center">
@@ -829,8 +1001,8 @@
             href="https://wa.me/6281558444484?text=Saya%20mau%20pengajuan%20ke%20BFI%20Agency"
           >
             <img
-              src="https://netfin.id/site-assets/netfin/button-wa.png"
-              class="rounded"
+              src="images/button-wa.png"
+              class="rounded bg-none shadow-none"
               alt="adira finance whatsapp"
               style="width: 300px"
             />
@@ -978,78 +1150,35 @@
       </div>
     </section>
 
-    <footer class="footer bg-dark pt-5 pt-md-6">
-      <div class="container pt-3 pt-md-0">
-        <div class="row pb-3">
-          <div class="col-md-4 mt-n2 pb-3 pb-md-0 mb-4">
-            <img
-              src="https://netfin.id/site-assets/netfin/logo.svg"
-              width="54"
-              class="pb-2"
-              alt=""
-            />
-            <h3 class="fs-5 text-light">Honda Jabar Solusi Motor Baru</h3>
-            <p class="">
-              <span class="text-light me-1"
-                >© All rights reserved. Made by</span
-              ><a
-                class="nav-link-style nav-link-light"
-                href="https://netfin.id/"
-                target="_blank"
-                rel="noopener"
-                >Netfin.id</a
-              >
-            </p>
-            <a
-              class="btn-social bs-outline bs-facebook bs-light bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-facebook"></i></a
-            ><a
-              class="btn-social bs-outline bs-twitter bs-light bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-twitter"></i></a
-            ><a
-              class="btn-social bs-outline bs-instagram bs-light bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-instagram"></i></a
-            ><a
-              class="btn-social bs-outline bs-google bs-light bs-lg me-2 mb-2"
-              href="#"
-              ><i class="bi bi-google"></i
-            ></a>
-          </div>
-        </div>
-        <hr class="my-0 border-light" />
-        <div class="row align-items-center mt-3 py-4">
-          <div class="col-md-6 order-md-2 text-md-end mb-3">
-            <ul class="list-inline fs-sm mb-0">
-              <li class="list-inline-item">
-                <a class="nav-link-style nav-link-light" href="#">Support</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="nav-link-style nav-link-light" href="#">Contacts</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="nav-link-style nav-link-light" href="#"
-                  >Terms &amp; Conditions</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-6 order-md-1 mb-3">
-            <p class="fs-sm mb-0">
-              <span class="text-light opacity-50 me-1"
-                >© All rights reserved. Made by</span
-              ><a
-                class="nav-link-style nav-link-light"
-                href="https://netfin.id/"
-                target="_blank"
-                rel="noopener"
-                >Netfin.id</a
-              >
-            </p>
-          </div>
-        </div>
+    <footer class="footer bg-darker py-4">
+      <div
+        class="container d-md-flex align-items-center justify-content-between py-2 text-center text-md-start"
+        bis_skin_checked="1"
+      >
+        <ul class="list-inline fs-sm mb-3 mb-md-0 order-md-2">
+          <li class="list-inline-item my-1">
+            <a class="nav-link-style nav-link-light" href="#">Support</a>
+          </li>
+          <li class="list-inline-item my-1">
+            <a class="nav-link-style nav-link-light" href="#">Contacts</a>
+          </li>
+          <li class="list-inline-item my-1">
+            <a class="nav-link-style nav-link-light" href="#"
+              >Terms &amp; Conditions</a
+            >
+          </li>
+        </ul>
+        <p class="fs-sm mb-0 me-3 order-md-1">
+          <span class="text-light opacity-50 me-1"
+            >© All rights reserved. Made by</span
+          ><a
+            class="nav-link-style nav-link-light"
+            href="https://netfin.id/"
+            target="_blank"
+            rel="noopener"
+            >Netfin.id</a
+          >
+        </p>
       </div>
     </footer>
 
