add new page, wom-finance

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
           <div class="offcanvas-body">
             <!-- Menu-->
             <ul class="navbar-nav">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-light"
                   href="https://wa.me/6281558444484?text=Halo%2C%20honda%20saya%20ingin%20melakukan%20pengajuan"
                   data-bs-toggle="dropdown"
                   >Hubungi Sales</a
@@ -165,7 +165,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-light"
                   href="https://wa.me/6281558444484?text=Halo%2C%20honda%20saya%20ingin%20melakukan%20pengajuan"
                   data-bs-toggle="dropdown"
                   >Mediator</a
@@ -173,7 +173,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link"
+                  class="nav-link text-light"
                   href="https://wa.me/6281558444484?text=Halo%2C%20honda%20saya%20ingin%20melakukan%20pengajuan"
                   data-bs-toggle="dropdown"
                   >Cek PO</a
